# VineOS

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  nightly.yml  release.yml  sanity.yml
app/: build.gradle.kts
app/src/androidTest/java/com/hexadecinull/vineos/data/: VineDatabaseTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vine_runtime.cpp
app/src/main/cpp/container/: namespace_manager.cpp  namespace_manager.h
app/src/main/cpp/display/: framebuffer_bridge.cpp  framebuffer_bridge.h
app/src/main/cpp/input/: uinput_bridge.cpp  uinput_bridge.h
app/src/main/cpp/qemu_bridge/: qemu_launcher.cpp  qemu_launcher.h
app/src/main/cpp/utils/: vine_log.h  vine_utils.cpp  vine_utils.h
app/src/main/java/com/hexadecinull/vineos/: MainActivity.kt  VineApplication.kt
app/src/main/java/com/hexadecinull/vineos/data/models/: Models.kt
app/src/main/java/com/hexadecinull/vineos/data/repository/: AppPreferences.kt  InstanceRepository.kt  ROMManifest.kt  ROMRepository.kt  VineDatabase.kt
app/src/main/java/com/hexadecinull/vineos/di/: DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/hexadecinull/vineos/domain/: VineVMManager.kt
app/src/main/java/com/hexadecinull/vineos/native/: VineRuntime.kt
app/src/main/java/com/hexadecinull/vineos/service/: VineService.kt
app/src/main/java/com/hexadecinull/vineos/ui/components/: InstanceCard.kt
app/src/main/java/com/hexadecinull/vineos/ui/navigation/: Navigation.kt
app/src/main/java/com/hexadecinull/vineos/ui/screens/: HomeScreen.kt  ROMsScreen.kt  SettingsScreen.kt  VMDisplayScreen.kt
app/src/main/java/com/hexadecinull/vineos/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/hexadecinull/vineos/ui/viewmodel/: CreateInstanceViewModel.kt  HomeViewModel.kt  ROMsViewModel.kt  SettingsViewModel.kt  VMDisplayViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/hexadecinull/vineos/data/: ROMImageTest.kt  ROMRepositoryTest.kt  VMInstanceTest.kt
app/src/test/java/com/hexadecinull/vineos/domain/: HomeViewModelTest.kt
gradle/: libs.versions.toml
